Atualizações na API de pedidos para suporte a filtros e correções de tipos
 Este commit introduz várias melhorias e correções na documentação e no código da API de pedidos. As mudanças incluem a adição de parâmetros d
 filtro para as rotas de obtenção de pedidos da memória e do banco de dados, bem como a correção do tipo de dados para o upload de arquivos e
 para os parâmetros de filtro.

 Alterações detalhadas:
 - Corrigido o tipo de dados do campo 'file' de 'string' para 'file' na documentação da API e no código, permitindo o upload de arquivos
 binários.
 - Adicionados parâmetros de filtro 'userId', 'orderId', 'startDate' e 'endDate' na rota GET '/memory/orders' para permitir a filtragem de
 pedidos armazenados na memória.
 - Adicionados parâmetros de filtro 'userId' e 'orderId' na rota GET '/database/orders' para permitir a filtragem de pedidos armazenados no
 banco de dados.
 - Corrigida a descrição da resposta 400 para a rota POST '/upload' para refletir a possibilidade de exceder o número máximo de arquivos.
 - Adicionada a resposta 400 para a rota GET '/database/orders' para casos em que nenhum filtro é especificado.
 - Adicionada a resposta 404 para as rotas GET '/memory/orders' e GET '/database/orders' para casos em que nenhum pedido é encontrado com os
 filtros fornecidos.
 - Removida a linha em branco no final do arquivo 'swagger.json'.

 Essas atualizações visam melhorar a funcionalidade e a usabilidade da API, fornecendo maior flexibilidade e precisão na recuperação de dados
 pedidos.
