# MagaLu/public/swagger.json
@@ -25,7 +25,7 @@
                   "file": {
                     "type": "array",
                     "items": {
-                      "type": "string",
+                      "type": "file",
                       "format": "binary"
                     }
                   }
@@ -39,7 +39,7 @@
             "description": "Lista de usuários processados a partir dos arquivos carregados."
           },
           "400": {
-            "description": "Nenhum arquivo foi carregado."
+            "description": "Nenhum arquivo foi carregado ou o número máximo de arquivos excedido."
           }
         }
       }
@@ -47,13 +47,47 @@
     "/memory/orders": {
       "get": {
         "summary": "Obter pedidos da memória",
-        "description": "Retorna a lista de pedidos armazenados na memória.",
+        "description": "Retorna a lista de pedidos armazenados na memória com base nos filtros fornecidos.",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "userId",
+            "schema": {
+              "type": "number"
+            },
+            "description": "ID do usuário para filtrar os pedidos."
+          },
+          {
+            "in": "query",
+            "name": "orderId",
+            "schema": {
+              "type": "number"
+            },
+            "description": "ID do pedido para filtrar os pedidos."
+          },
+          {
+            "in": "query",
+            "name": "startDate",
+            "schema": {
+              "type": "string"
+            },
+            "description": "Data de início para filtrar os pedidos (formato YYYY-MM-DD)."
+          },
+          {
+            "in": "query",
+            "name": "endDate",
+            "schema": {
+              "type": "string"
+            },
+            "description": "Data de fim para filtrar os pedidos (formato YYYY-MM-DD)."
+          }
+        ],
         "responses": {
           "200": {
-            "description": "Lista de pedidos da memória."
+            "description": "Lista de pedidos da memória filtrada."
           },
           "404": {
-            "description": "Nenhum pedido encontrado na memória."
+            "description": "Nenhum pedido encontrado com os filtros fornecidos."
           }
         }
       }
@@ -67,7 +101,7 @@
             "in": "query",
             "name": "userId",
             "schema": {
-              "type": "string"
+              "type": "number"
             },
             "description": "ID do usuário para filtrar os pedidos."
           },
@@ -75,7 +109,7 @@
             "in": "query",
             "name": "orderId",
             "schema": {
-              "type": "string"
+              "type": "number"
             },
             "description": "ID do pedido para filtrar os pedidos."
           }
@@ -83,6 +117,12 @@
         "responses": {
           "200": {
             "description": "Lista de pedidos do banco de dados."
+          },
+          "400": {
+            "description": "Nenhum filtro foi especificado para a busca."
+          },
+          "404": {
+            "description": "Nenhum pedido encontrado com os filtros fornecidos."
           },
           "500": {
             "description": "Erro ao buscar pedidos."
